becpg-plm/becpg-plm-share/src/main/web/components/entity-charact-views/formulation-view.css
/**
 Yui 
**/
.formulation-view  .yui-g .yui-u {
	width: 49.5%;
}

.formulation-view  .yui-skin-default .yui-button {
	margin: 0px;
}

/**
 Dashlet
**/
.formulation-view  .datagrid .scrollableList {
	padding: 0;
	height: 260px;
}

.formulation-view  .datagrid {
	padding: 0px;
}

.formulation-view  .dashlet {
	margin: 10px 0 0;
}

.formulation-view  .dashlet  .toolbar {
	height: 28px;
	margin: 0px;
	padding: 0x;
	border-bottom: none;
}

 .yui-skin-lightTheme .formulation-view .yui-dt table,
  .formulation-view .yui-dt-col-actions{
	border-collapse: collapse;
	border-right:none;
}

.formulation-view .datagrid .yui-dt-col-actions  {
    border-right:none;
}


/**
  New Theme
**/

/* .formulation-view  .yui-g .yui-u {
	width: 50%;
}

.formulation-view  .yui-resize .yui-resize-handle-b {
   background-color: rgb(238, 238, 238) !important;
}

.formulation-view  .yui-g {
	margin-top:5px;
}

div.formulation-view{
	margin: 0 -10px;
} 


 .formulation-view .dashlet {
	border-top: medium none;
	border-left: medium none;
    border-radius: 0;
	margin: 0px;
    padding: 0;
} 

 .formulation-view .dashlet .title {
    display: none;
}
 */
/**
 Bar
*/
.formulation-view  .datagrid .datagrid-bar .item-select {
	float: inherit;
	width: inherit;
}

.formulation-view  .datagrid .datagrid-bar .paginator {
	float: inherit;
	width: inherit;
}

.formulation-view  .datagrid-bar .left,.datagrid-bar .left div {
	float: left;
}

.formulation-view  .datagrid-bar .right {
	float: right;
}



.formulation-view .datagrid-bar .left  .filterform  div,
.formulation-view .datagrid-bar .left  .filterform  {
    float:none;
}


.formulation-view  .datagrid-bar .new-row span.first-child {
	background: url(../images/add-row-16.png) no-repeat 12px 4px;
	padding-left: 24px;
}

.formulation-view  .datagrid-bar  .onActionBulkEdit {
	background: transparent url(../images/edit-inline-16.png) no-repeat 12px
		4px;
	padding-left: 22px;
}

.formulation-view  .datagrid-bar  .onActionSelectColor  {
	background-image:  url("../../components/images/select-color-16.png") no-repeat 12px
		4px;
	padding-left: 22px;
}

.formulation-view  .datagrid-bar  .onActionSimulate,.datagrid .onActionSimulate a
	{
	background: transparent url(../documentlibrary/actions/folder-copy-to-16.png)
		no-repeat 12px 4px;
	padding-left: 22px;
}

.datagrid-bar .onAddLabelingAspect,.datagrid .onAddLabelingAspect a {
	background: transparent url(../images/tag-16.png) no-repeat 12px 4px;
	padding-left: 22px;
}

.datagrid .labeling-aspect {
	background: url("../images/tag-16.png") no-repeat scroll 0 0 transparent;
	padding-left: 14px;
}

/* Hide New Item */
.constraintsList .datagrid .datagrid-bar .new-row {
	display: none;
}

/** Full screen mode */
.full-screen .sticky-footer,.full-screen  .sticky-push {
	height: 0px;
}

/** Full screen form */
div#full-screen-form {
	border: 1px solid #CCCCCC;
	box-shadow: 0 1px 2px #CCCCCC;
	height: 50px;
	margin-top: 6px;
	padding: 6px;
	border-radius: 4px;
}

#full-screen-form  div.form-fields {
	float: left;
	margin: 0px;
	padding: 0px;
	border: 0px;
	margin: 0px;
	padding: 0px;
}

#full-screen-form  div.form-field {
	float: left;
	margin: 0px;
	padding: 2px;
}

#full-screen-form  .clear {
	height: 0px;
}

#full-screen-form   .yui-ac .ac-body {
	min-height: 18px;
}

#full-screen-form form {
	display: table;
	margin: 0 15px;
}

#full-screen-form .help-icon {
	display: none;
}

#full-screen-form  .yui-ac .ac-body {
	width: 15em;
	max-width: 15em;
}

#full-screen-form .ac-toogle {
	height: 18px;
}

.yui-skin-lightTheme #full-screen-form   .yui-ac-container,#full-screen-form  .yui-ac-container
	{
	width: 35em;
}

#full-screen-form .yui-ac .ac-body .yui-ac-input {
	width: 85%;
}

#full-screen-form .set {
	padding: 0px;
}

#full-screen-form .form-buttons {
	float: left;
	margin-top: 10px;
	padding: 10px;
	height: 25px;
}

#full-screen-form span.yui-push-button {
	display: none;
}

#full-screen-form  .yui-submit-button span.first-child {
	background: url("../images/add-row-16.png") no-repeat scroll 12px 4px
		transparent;
	padding-left: 24px;
}

#full-screen-form  form .mandatory,#full-screen-form  .form-fields .mandatory,#full-screen-form  .form-fields input.mandatory[type="text"],#full-screen-form  .form-fields .input.mandatory input[type="text"],#full-screen-form  .form-fields .input .mandatory input[type="text"]
	{
	background-color: transparent;
}

